Fix dates word wrap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -963,7 +963,6 @@ th {
   color: rgb(140, 140, 140);
   line-height: 1.1em;
   width: 75px;
-  white-space: nowrap;
 }
 
 span.smalldate {
